--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "countdown": "^2.6.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.6",
+    "vue-meta": "^1.6.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
