Add assets to timers

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "star-wars-countdown",
-  "short_name": "star-wars-countdown",
+  "name": "Star Wars Countdown",
+  "short_name": "Star Wars Countdown",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
@@ -15,6 +15,6 @@
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#4DBA87"
+  "background_color": "#151515",
+  "theme_color": "#151515"
 }
