Update pwa config

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,11 @@
 {
   "name": "Star Wars Countdown",
   "short_name": "Star Wars Countdown",
+  "start_url": "./index.html",
+  "display": "standalone",
+  "background_color": "#151515",
+  "theme_color": "#151515",
+
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
@@ -12,9 +17,5 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "start_url": "./index.html",
-  "display": "standalone",
-  "background_color": "#151515",
-  "theme_color": "#151515"
+  ]
 }
