Update splashscreen’s background color

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "author": "Michal Tynior",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#151515",
+  "background_color": "#ffffff",
   "theme_color": "#151515",
 
   "icons": [
